--- a/W7D2/music_app/app/views/layouts/application.html.erb
+++ b/W7D2/music_app/app/views/layouts/application.html.erb
@@ -10,6 +10,17 @@
   </head>
 
   <body>
+    <% if logged_in? %>
+      <h1>Hi, <%= current_user.email %></h1>
+      <form action="<%= sessions_url %>" method="post">
+        <%= auth_token %>
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="submit" value="Logout">
+      </form>
+    <% else %>
+      <a href="<%= new_sessions_url %>">Sign In</a>
+      <a href="<%= new_user_url %>">New User Sign Up</a>
+    <% end %>
     <%= yield %>
   </body>
 </html>
