--- a/W7D2/music_app/app/assets/stylesheets/application.css
+++ b/W7D2/music_app/app/assets/stylesheets/application.css
@@ -13,3 +13,53 @@
  *= require_tree .
  *= require_self
  */
+
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
+header > span {
+  font-size: 2em;
+  font-weight: bold;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: white;
+}
+
+header {
+  padding: 10px 20px;
+  background-color: #11354d;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login {
+  color: white;
+}
+
+.login a {
+  text-decoration: none;
+  color: black;
+  margin-left: 10px;
+  background-color: white;
+  border-radius: 5px;
+  padding: 2px 10px;
+}
+
+section form {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  background-color: #dddddd;
+  border-radius: 5px;
+  padding: 20px
+}
+
+label + * {
+  margin-top: 20px;
+}
+
+h1 {
+  text-align: center;
+}
