--- a/W7D2/music_app/app/views/users/new.html.erb
+++ b/W7D2/music_app/app/views/users/new.html.erb
@@ -1,7 +1,8 @@
 <h1>New user sign up</h1>
 
 <form action="<%= users_url %>" method="POST">
-  <%= auth_token %>
+  <%= render 'layouts/auth' %>
+  
   <label>
     Email:
     <input type="text" name="user[email]">
