--- a/W9D1/css-friends-07/skeleton/css/07-online.css
+++ b/W9D1/css-friends-07/skeleton/css/07-online.css
@@ -1,1 +1,16 @@
 /* PHASE 7: Online */
+.online {
+  position: absolute;
+  transform: rotate(-45deg);
+  background-color: green;
+  color: white;
+  font-weight: bold;
+  padding: 2px 30px;
+  top: 20px;
+  left: -30px;
+  box-shadow: 2px 2px 5px black;
+}
+
+.profile-picture {
+  overflow: hidden;
+}
